<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhoneWheel</string>
    <string name="app_status">Inicializando...</string>
    <string name="app_description">Controlador Giroscópico</string>

    <!-- Status de conexão -->
    <string name="status_connected">Conectado</string>
    <string name="status_connecting">Conectando…</string>
    <string name="status_disconnected">Desconectado</string>
    <string name="status_lost">Conexão Perdida</string>

    <!-- Controles -->
    <string name="button_recenter">Recenter</string>
    <string name="button_axis_x">Eixo X</string>
    <string name="button_axis_y">Eixo Y</string>
    <string name="button_axis_z">Eixo Z</string>
    <string name="button_discover">Buscar servidor</string>
    <string name="button_connect">Conectar</string>
    <string name="button_disconnect">Desconectar</string>
    <string name="button_preview">Prévia do controle</string>

    <!-- Campos -->
    <string name="hint_ip">IP do computador (ex: 192.168.0.10)</string>
    <string name="hint_port">Porta (padrão: 5005)</string>

    <!-- Controller Screen -->
        <string name="controller_title">Controle</string>

            <!-- Modo Volante -->
            <string name="wheel_mode">Modo Volante</string>
            <string name="wheel_mode_on">Volante ativo</string>
            <string name="wheel_mode_off">Volante desativado</string>
            <string name="wheel_mode_no_gyro">Giroscópio não disponível</string>

        <!-- Labels -->
        <string name="label_angle">Ângulo</string>
        <string name="label_gyro">Gyro</string>
        <string name="label_axis">Eixo</string>
        <string name="label_sensitivity">Sensibilidade</string>
        <string name="label_range">Range</string>
        <string name="label_connection">Conexão UDP</string>
        <string name="label_controls">Controles</string>
        <string name="label_gamepad">Gamepad (teste)</string>
        <string name="gamepad_hint">Toque e segure para pressionar</string>
            <string name="gamepad_connected">Gamepad conectado</string>
            <string name="gamepad_disconnected">Gamepad desconectado</string>

            <!-- Botões do gamepad -->
            <string name="button_a">A</string>
            <string name="button_b">B</string>
            <string name="button_x">X</string>
            <string name="button_y">Y</string>
            <string name="button_lb">LB</string>
            <string name="button_rb">RB</string>
            <string name="button_ls">LS</string>
            <string name="button_rs">RS</string>
            <string name="button_lt">LT</string>
            <string name="button_rt">RT</string>
            <string name="button_back">Back</string>
            <string name="button_start">Start</string>

    <!-- Preview mode -->
    <string name="button_back_to_connection">Voltar</string>
    <string name="status_preview">PRÉVIA</string>

    <!-- Wheel mode UI -->
    <string name="wheel_mode_indicator">● VOLANTE</string>
    <string name="button_exit_wheel_mode">Sair do Volante</string>
    <string name="button_recenter_wheel">⊕ Recentar</string>
</resources>
